# shield-ci

./: .gitignore  Cargo.toml  Dockerfile  README.md  test-dep-rep.json  test-report.json
src/: Dockerfile  main.rs
src/language_mapping/: mod.rs  npm_mapper.rs
src/models/: application.rs  config.rs  dependecy_report.rs  mod.rs  owasp.rs  property_mapping.rs  trivy.rs
src/property_mapping/: cargo_mapper.rs  mod.rs  npm_mapper.rs  project_detection.rs
src/utils/: git_utils.rs  mod.rs  owasp_dep_check.rs  pocketbase.rs  shared.rs  shield.rs  trivy_utils.rs
test-data/npm/: dep1.json  dep1.yaml  package.json  test-npm.sh
test-data/npm/p-shield/: app.json
