[package]
name = "shieldci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.8", features = ["derive"] }
jsonpath = "0.1.1"
log = "0.4.17"
lopdf = { version = "0.29.0", features =["nom","nom_parser", "pom_parser"] }
pdf_form = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.19"
simple_logger = "4.0.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
